Fix: Profiles are now visible
- Profiles are now visible
- Updated mobile design
- Lines to create profiles are not draggable now
- Changed FlexiblePlot to FlexibleWidthXYPlot
- Applied some minors changes on CSS

--- a/packages/wipapp/src/components/App/App.css
+++ b/packages/wipapp/src/components/App/App.css
@@ -1,30 +1,3 @@
-@media (max-width: 799px) {
-  .right-side-menu-container {
-    width: 100%;
-  }
-  .main__wrapper {
-    width: 0%;
-  }
-}
-
-@media (min-width: 800px) {
-  .right-side-menu-container {
-    width: 45%;
-  }
-  .main__wrapper {
-    width: 55%;
-  }
-}
-
-@media (min-width: 1000px) {
-  .right-side-menu-container {
-    width: 35%;
-  }
-  .main__wrapper {
-    width: 65%;
-  }
-}
-
 .center {
   width: 100%;
   height: 100%;
@@ -88,4 +61,77 @@
 .header-logo {
   padding-right: 17px;
   border-right: 1px solid #c8c8c830;
+}
+
+.menu-items{
+  display: flex;
+  align-items: center;
+}
+
+.color-picker{
+  display: flex;
+  margin: 0.4rem;
+  border-radius: 5px;
+  width: 250px;
+  border: 1px solid #000;
+  overflow: hidden
+}
+
+.footer-tools{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center
+ }
+
+ .header-logo #logo {
+  transition: 0.6s all;
+}
+
+ .header-logo #logo:hover {
+  filter: brightness(2.25) saturate(3);
+ }
+
+@media (max-width: 799px) {
+  .right-side-menu-container {
+    width: 100%;
+  }
+  .main__wrapper {
+    width: 0%;
+  }
+
+  .header-logo {
+    margin-top: 10px;
+    border-right: none;
+    padding-right: 0px;
+  }
+
+  .color-picker {
+    width: auto;
+  }
+
+  .footer-tools{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-grow: 1;
+  }
+}
+
+@media (min-width: 800px) {
+  .right-side-menu-container {
+    width: 45%;
+  }
+  
+  .main__wrapper {
+    width: 55%;
+  }
+}
+
+@media (min-width: 1000px) {
+  .right-side-menu-container {
+    width: 30%;
+  }
+  .main__wrapper {
+    width: 70%;
+  }
 }
